# tunenote

./: .gitignore  README.md  TuneNote-debug-v7.apk  TuneNote-debug.apk  TuneNote-v6.apk  TuneNote-v7.apk
.github/workflows/: android.yml
app/backend/: pyproject.toml
app/backend/tunenote_api/: main.py  mock_transcription.py  models.py  transcription.py
app/frontend/: capacitor.config.ts  index.html  package-lock.json  package.json
app/frontend/.github/workflows/: android.yml
app/frontend/android/: build.gradle  capacitor.settings.gradle
app/frontend/android/app/: build.gradle  capacitor.build.gradle
app/frontend/android/app/src/main/: AndroidManifest.xml
app/frontend/android/app/src/main/java/com/tunenote/app/: MainActivity.java
app/frontend/android/app/src/main/res/values/: strings.xml
app/frontend/src/: App.tsx  api.ts  audio.ts  logger.ts  styles.css  transcription.ts  types.ts
app/frontend/src/components/: JianpuPreview.tsx  LogViewer.tsx  Recorder.tsx  ScorePreview.tsx  StaffPreview.tsx
doc/: design.md  progress.md  requirements.md
