[project]
name = "tunenote-api"
version = "0.1.0"
description = "TuneNote MVP backend API"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.9",
  "basic-pitch>=1.0.0",
  "librosa>=0.10.0",
  "soundfile>=0.12.0",
  "numpy>=1.24.0",
  "scipy>=1.11.0"
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
